# tinyphysics-1

./: CMakeLists.txt  README.md
data/gimp/: ball.xcf  fulldisk.xcf  particle.xcf
data/shaders/: passthrough-fragment.glsl  passthrough-vertex.glsl
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml  unittest.properties
src/cpp/: main.cpp
src/cpp/tinyphysics/geometry/: algorithms.cpp  algorithms.h  constants.h  coord2d.cpp  coord2d.h  line2d.cpp  line2d.h  point2d.cpp  point2d.h  polygon2d.cpp  polygon2d.h  ray2d.h  rectangle2d.cpp  rectangle2d.h  segment2d.cpp  segment2d.h  shape2d.h  vector2d.cpp  vector2d.h
src/cpp/tinyphysics/sfml/: application.cpp  application.h  color.cpp  color.h  demos.cpp  demos.h  fpscounter.cpp  fpscounter.h  mainloop.cpp  mainloop.h
src/cpp/tinyphysics/sfml/demo1/: demo.cpp  demo.h
src/cpp/tinyphysics/sfml/demo2/: demo.cpp  demo.h
src/cpp/tinyphysics/sfml/demo3/: demo.cpp  demo.h
src/cpp/tinyphysics/sfml/demo4/: demo.cpp  demo.h
tests/: CMakeLists.txt
tests/unitary/: test_algorithms.cpp  test_line2d.cpp  test_point.cpp  test_point2d.cpp  test_polygon2d.cpp  test_ray2d.cpp  test_rectangle2d.cpp  test_segment2d.cpp  test_vector2d.cpp
